fix(authentik): modify redis configuration

--- a/kubernetes/apps/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/security/authentik/app/externalsecret.yaml
@@ -23,6 +23,8 @@ spec:
         AUTHENTIK_EMAIL__USE_SSL: "true"
         AUTHENTIK_EMAIL__FROM: "Authentik <auth@${SECRET_DOMAIN}>"
         # Redis
+        AUTHENTIK_REDIS__HOST: dragonfly.database.svc.cluster.local
+        AUTHENTIK_REDIS__PORT: "6379"
         AUTHENTIK_REDIS__DB: "2"
         AUTHENTIK_REDIS__PASSWORD: "{{ .DRAGONFLY_PASSWORD }}"
         # SMTP
