feat(grafana): enable oauth

--- a/kubernetes/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/observability/grafana/app/externalsecret.yaml
@@ -12,17 +12,20 @@ spec:
     name: *name
     template:
       data:
-        GF_DATABASE_NAME: &dbName grafana
+        # Grafana
         GF_DATABASE_HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        GF_DATABASE_NAME: &dbName grafana
         GF_DATABASE_USER: &dbUser "{{ .GRAFANA_POSTGRES_USER }}"
-        GF_DATABASE_PASSWORD: &dbPass "{{ .GRAFANA_POSTGRES_PASS }}"
+        GF_DATABASE_PASSWORD: &dbPass "{{ .GRAFANA_POSTGRES_PASSWORD }}"
         GF_DATABASE_SSL_MODE: disable
         GF_DATABASE_TYPE: postgres
+        GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ .GRAFANA_OAUTH_CLIENT_ID }}"
         GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ .GRAFANA_OAUTH_CLIENT_SECRET }}"
         adminUser: "{{ .GRAFANA_ADMIN_USER }}"
         adminPass: "{{ .GRAFANA_ADMIN_PASSWORD }}"
-        INIT_POSTGRES_DBNAME: *dbName
+        # Postgres Init
         INIT_POSTGRES_HOST: *dbHost
+        INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
