fix(grafana): re-enable default admin user

--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -40,6 +40,10 @@ spec:
       GF_SECURITY_DISABLE_INITIAL_ADMIN_CREATION: true
     envFromSecrets:
       - name: *app
+    admin:
+      existingSecret: *app
+      userKey: adminUser
+      passwordKey: adminPass
     grafana.ini:
       analytics:
         check_for_updates: false
