--- a/kubernetes/apps/database/pgadmin/app/kustomization.yaml
+++ b/kubernetes/apps/database/pgadmin/app/kustomization.yaml
@@ -9,5 +9,8 @@ configMapGenerator:
   - name: pgadmin-config
     files:
       - servers.json=./resources/config.json
+  - name: pgadmin-oauth
+    files:
+      - config_local.py=./resources/config_local.py
 generatorOptions:
   disableNameSuffixHash: true
