--- a/kubernetes/apps/database/pgadmin/app/externalsecret.yaml
+++ b/kubernetes/apps/database/pgadmin/app/externalsecret.yaml
@@ -14,6 +14,8 @@ spec:
       data:
         PGADMIN_DEFAULT_EMAIL: "{{ .PGADMIN_DEFAULT_EMAIL }}"
         PGADMIN_DEFAULT_PASSWORD: "{{ .PGADMIN_DEFAULT_PASSWORD }}"
+        OAUTH2_CLIENT_ID: "{{ .PGADMIN_OAUTH2_CLIENT_ID }}"
+        OAUTH2_CLIENT_SECRET: " {{ .PGADMIN_OAUTH2_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: pgadmin
