feat(pgadmin): enable oauth

--- a/kubernetes/apps/database/pgadmin/app/kustomization.yaml
+++ b/kubernetes/apps/database/pgadmin/app/kustomization.yaml
@@ -12,5 +12,5 @@ configMapGenerator:
   - name: pgadmin-oauth
     files:
       - config_local.py=./resources/config_local.py
-generatorOptions:
-  disableNameSuffixHash: true
+# generatorOptions:
+#   disableNameSuffixHash: true
