--- a/kubernetes/apps/database/pgadmin/app/externalsecret.yaml
+++ b/kubernetes/apps/database/pgadmin/app/externalsecret.yaml
@@ -17,6 +17,7 @@ spec:
         config_local.py: |
           AUTHENTICATION_SOURCES = ['oauth2', 'internal']
           OAUTH2_AUTO_CREATE_USER = True
+          MASTER_PASSWORD_REQUIRED = False
           OAUTH2_CONFIG = [{
               'OAUTH2_NAME': '${SECRET_DOMAIN}',
               'OAUTH2_DISPLAY_NAME': 'Authentik',
