--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -31,18 +31,30 @@ repositories:
     oci: true
 
 releases:
-  - name: kube-prometheus-stack-crds
-    namespace: observability
-    chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
-    version: 18.0.1
-
   - name: cilium
     namespace: kube-system
     atomic: true
     chart: cilium/cilium
     version: 1.17.1
     values: ["../kubernetes/apps/kube-system/cilium/app/helm/values.yaml"]
-    needs: ["observability/kube-prometheus-stack-crds"]
+    hooks:
+      - # Wait for cilium CRDs to be available.
+        events: ['postsync']
+        command: bash
+        args:
+          - -c
+          - until kubectl get crd ciliumbgppeeringpolicies.cilium.io ciliuml2announcementpolicies.cilium.io ciliumloadbalancerippools.cilium.io &>/dev/null; do sleep 10; done
+        showlogs: true
+      - # Apply cilium network configuration.
+        events: ['postsync']
+        command: kubectl
+        args:
+          - apply
+          - --namespace=kube-system
+          - --server-side
+          - --field-manager=kustomize-controller
+          - --filename=../kubernetes/apps/kube-system/cilium/app/networks.yaml
+        showlogs: true
 
   - name: coredns
     namespace: kube-system
@@ -74,6 +86,24 @@ releases:
     chart: external-secrets/external-secrets
     version: 0.14.3
     values: ["../kubernetes/apps/security/external-secrets/app/helm/values.yaml"]
+    hooks:
+      - # Wait for external-secrets CRDs to be available.
+        events: ['postsync']
+        command: bash
+        args:
+          - -c
+          - until kubectl get crd clustersecretstores.external-secrets.io &>/dev/null; do sleep 10; done
+        showlogs: true
+      - # Apply cluster secret store configuration.
+        events: ['postsync']
+        command: kubectl
+        args:
+          - apply
+          - --namespace=external-secrets
+          - --server-side
+          - --field-manager=kustomize-controller
+          - --filename=../kubernetes/apps/security/onepassword/app/clustersecretstore.yaml
+        showlogs: true
     needs: ["security/cert-manager"]
 
   - name: flux-operator
