--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -66,20 +66,10 @@ spec:
         dashboards:
           annotations:
             grafana_folder: Kubernetes
-    kubeApiServer:
-      serviceMonitor:
-        selector:
-          k8s-app: kube-apiserver
-    kubeControllerManager: &kubeControllerManager
-      service:
-        selector:
-          k8s-app: kube-controller-manager
     kubeEtcd:
-      <<: *kubeControllerManager # etcd runs on control plane nodes.
-    kubeScheduler:
       service:
         selector:
-          k8s-app: kube-scheduler
+          component: kube-apiserver # etcd runs on control plane nodes.
     kubeProxy:
       enabled: false # Replaced with Cilium.
     kube-state-metrics:
