--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,10 +70,12 @@
   },
   "files.trimTrailingWhitespace": true,
   "material-icon-theme.files.associations": {
-    // TODO: https://github.com/PKief/vscode-material-icon-theme/issues/330
-    ".sops.yaml": "yaml",
+    ".sops.yaml": "lock",
     "*.sops.env": "lock",
-    "*.sops.yaml": "lock"
+    "*.sops.yaml": "lock",
+    "helmfile.yaml": "helm",
+    "kubeconfig": "kubernetes",
+    "talosconfig": "kubernetes"
   },
   "material-icon-theme.folders.associations": {
     // top level
