--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -7,8 +7,8 @@
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["digest"],
-      "matchPackagePatterns": ["ghcr.io/bjw-s", "ghcr.io/onedr0p"],
-      "ignoreTests": true,
+      "matchPackageNames": ["/bjw-s/", "/onedr0p/"],
+      "ignoreTests": true
     },
     {
       "description": ["Auto-merge GitHub Actions"],
@@ -17,7 +17,7 @@
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["minor", "patch", "digest"],
-      "ignoreTests": true,
+      "ignoreTests": true
     },
     {
       "description": ["Auto-merge KPS minors and patches"],
@@ -26,7 +26,7 @@
       "automergeType": "pr",
       "matchUpdateTypes": ["minor", "patch"],
       "matchPackageNames": ["/kube-prometheus-stack/"],
-      "ignoreTests": false,
+      "ignoreTests": false
     }
   ]
 }
