--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -8,20 +8,18 @@
     ":dependencyDashboard",
     ":gitSignOff",
     ":semanticCommits",
-    ":skipStatusChecks",
     ":timezone(Europe/Stockholm)",
-    "github>pwyde/home-ops//.github/renovate/autoMerge.json5",
-    "github>pwyde/home-ops//.github/renovate/customManagers.json5",
-    "github>pwyde/home-ops//.github/renovate/grafanaDashboards.json5",
-    "github>pwyde/home-ops//.github/renovate/groups.json5",
-    "github>pwyde/home-ops//.github/renovate/labels.json5",
-    "github>pwyde/home-ops//.github/renovate/packageRules.json5",
-    "github>pwyde/home-ops//.github/renovate/semanticCommits.json5"
+    "github>pwyde/home-ops//.renovate/autoMerge.json5",
+    "github>pwyde/home-ops//.renovate/customManagers.json5",
+    "github>pwyde/home-ops//.renovate/grafanaDashboards.json5",
+    "github>pwyde/home-ops//.renovate/groups.json5",
+    "github>pwyde/home-ops//.renovate/labels.json5",
+    "github>pwyde/home-ops//.renovate/packageRules.json5",
+    "github>pwyde/home-ops//.renovate/semanticCommits.json5"
   ],
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
   "commitBodyTable": true,
-  "onboarding": false,
   "assigneesFromCodeOwners": true,
   "reviewersFromCodeOwners": true,
   "ignorePaths": ["**/*.sops.*", "**/resources/**"],
@@ -37,8 +35,6 @@
   },
   "kubernetes": {
     "fileMatch": [
-      "(^|/)\\.taskfiles/.+\\.ya?ml$",
-      "(^|/)talos/.+\\.ya?ml$",
       "(^|/)kubernetes/.+\\.ya?ml$"
     ]
   }
