--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: "Renovate"
+name: Renovate
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ on:
         default: debug
         required: false
       version:
-        description: Renovate Version
+        description: Renovate version
         default: latest
         required: false
   schedule:
@@ -22,8 +22,8 @@ on:
   push:
     branches: ["main"]
     paths:
-      - .github/renovate.json5
-      - .github/renovate/**.json5
+      - .renovaterc.json5
+      - .renovate/**.json5
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
@@ -33,14 +33,13 @@ env:
   LOG_LEVEL: "${{ inputs.logLevel || 'debug' }}"
   RENOVATE_AUTODISCOVER: true
   RENOVATE_AUTODISCOVER_FILTER: "${{ github.repository }}"
-  RENOVATE_CONFIG_FILE: .github/renovate.json5
   RENOVATE_DRY_RUN: "${{ inputs.dryRun == true }}"
   RENOVATE_PLATFORM: github
   RENOVATE_PLATFORM_COMMIT: true
   WORKFLOW_RENOVATE_VERSION: "${{ inputs.version || 'latest' }}"
 
 jobs:
-  renovate:
+  main:
     name: Renovate
     runs-on: ubuntu-latest
     steps:
@@ -56,9 +55,8 @@ jobs:
         with:
           token: "${{ steps.app-token.outputs.token }}"
 
-      - name: Renovate
+      - name: Run Renovate
         uses: renovatebot/github-action@v41.0.14
         with:
-          configurationFile: "${{ env.RENOVATE_CONFIG_FILE }}"
           token: "${{ steps.app-token.outputs.token }}"
           renovate-version: "${{ env.WORKFLOW_RENOVATE_VERSION }}"
