--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -4,9 +4,10 @@
 - { name: "area/docs",                  color: "0e8a16", description: "Changes made in the docs directory."       }
 - { name: "area/github",                color: "141a22", description: "Changes made in the github directory."     }
 - { name: "area/kubernetes",            color: "326be5", description: "Changes made in the kubernetes directory." }
+- { name: "area/renovate",              color: "027fa0", description: "Changes made in the renovate directory." }
 - { name: "area/talos",                 color: "382d56", description: "Changes made in the talos directory."      }
-- { name: "area/taskfiles",             color: "28bdaf", description: "Changes made in the taskfiles directory."  }
-# Renovate
+- { name: "area/taskfile",              color: "28bdaf", description: "Changes made in the taskfiles directory."  }
+# Renovate Types
 - { name: "renovate/container",         color: "027fa0" }
 - { name: "renovate/github-action",     color: "027fa0" }
 - { name: "renovate/github-release",    color: "027fa0" }
@@ -25,9 +26,9 @@
 - { name: "size/XL",                    color: "ee5500", description: "Denotes a PR that changes 500-999 lines, ignoring generated files." }
 - { name: "size/XXL",                   color: "ee0000", description: "Denotes a PR that changes 1000+ lines, ignoring generated files."   }
 # Uncategorized
-- { name: "hold",                       color: "ee0701" }
 - { name: "bug",                        color: "ee0701" }
 - { name: "do-not-merge",               color: "ee0701" }
+- { name: "hold",                       color: "ee0701" }
 - { name: "docs",                       color: "0e8a16" }
 - { name: "enhancement",                color: "84b6eb" }
 - { name: "link-checker",               color: "7b55d7" }
