--- a/.github/workflows/meta-labeler.yaml
+++ b/.github/workflows/meta-labeler.yaml
@@ -3,13 +3,15 @@
 name: "Meta: Labeler"
 
 on:
-  pull_request:
+  workflow_dispatch:
+  pull_request_target:
     branches: ["main"]
 
 jobs:
   labeler:
     name: Labeler
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     steps:
       - name: Generate Token
         uses: actions/create-github-app-token@v1
