--- a/.github/workflows/meta-sync-labels.yaml
+++ b/.github/workflows/meta-sync-labels.yaml
@@ -10,26 +10,21 @@ on:
   schedule:
     - cron: "0 0 * * *" # Every day at midnight.
 
+permissions:
+  issues: write
+
 jobs:
-  labels:
+  sync-labels:
     name: Sync Labels
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: "${{ secrets.BOT_APP_ID }}"
-          private-key: "${{ secrets.BOT_APP_PRIVATE_KEY }}"
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: "${{ steps.app-token.outputs.token }}"
+          sparse-checkout: .github/labels.yaml
 
       - name: Sync Labels
         uses: EndBug/label-sync@v2
         with:
           config-file: .github/labels.yaml
-          token: "${{ steps.app-token.outputs.token }}"
           delete-other-labels: true
