--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -113,7 +113,7 @@ jobs:
 
   success:
     if: ${{ always() }}
-    name: Flux Local - success
+    name: Flux Local - Success
     needs: ["test", "diff"]
     runs-on: ubuntu-latest
     steps:
