--- a/kubernetes/apps/observability/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/silence-operator/app/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: wiremind
-        namespace: flux-system
+        namespace: observability
   maxHistory: 2
   install:
     remediation:
