--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -1,4 +1,15 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: nextcloud
+  namespace: self-hosted # Required for Renovate lookups.
+spec:
+  interval: 1h
+  timeout: 3m
+  url: https://nextcloud.github.io/helm/
+---
 # yaml-language-server: $schema=https://crd.movishell.pl/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -13,7 +24,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: nextcloud
-        namespace: flux-system
+        namespace: self-hosted
   maxHistory: 2
   install:
     remediation:
