--- a/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
@@ -13,7 +13,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: democratic-csi
-        namespace: flux-system
+        namespace: storage
   install:
     remediation:
       retries: 3
