--- a/kubernetes/apps/storage/volsync/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/volsync/app/helmrelease.yaml
@@ -1,4 +1,15 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: backube
+  namespace: storage # Required for Renovate lookups.
+spec:
+  interval: 1h
+  timeout: 3m
+  url: https://backube.github.io/helm-charts
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -13,7 +24,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: backube
-        namespace: flux-system
+        namespace: storage
   install:
     crds: CreateReplace
     remediation:
