--- a/kubernetes/apps/system/nvidia-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/system/nvidia-device-plugin/app/helmrelease.yaml
@@ -1,4 +1,15 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: nvidia-device-plugin
+  namespace: system # Required for Renovate lookups.
+spec:
+  interval: 1h
+  timeout: 3m
+  url: https://nvidia.github.io/k8s-device-plugin
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -13,7 +24,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: nvidia-device-plugin
-        namespace: flux-system
+        namespace: system
   install:
     crds: CreateReplace
     remediation:
