--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -72,6 +72,7 @@ tasks:
         gitrepositories
         kustomizations
         helmrepositories
+        ocirepositories
         helmreleases
         certificates
         certificaterequests
