--- a/kubernetes/apps/database/dragonfly/app/helmrelease.yaml
+++ b/kubernetes/apps/database/dragonfly/app/helmrelease.yaml
@@ -1,4 +1,20 @@
 ---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
+metadata:
+  name: dragonfly
+spec:
+  interval: 1h
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: v1.1.10
+  url: oci://ghcr.io/dragonflydb/dragonfly-operator/helm
+  verify:
+    provider: cosign
+---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -6,14 +22,9 @@ metadata:
   name: dragonfly-operator
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: dragonfly-operator
-      version: v1.1.10
-      sourceRef:
-        kind: HelmRepository
-        name: dragonfly
-        namespace: flux-system
+  chartRef:
+    kind: OCIRepository
+    name: dragonfly
   install:
     crds: CreateReplace
     remediation:
