chore: move app-template OCIRepository into components

--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: database
 components:
   - ../../components/common
+  - ../../components/repos
 resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
