--- a/kubernetes/apps/ai/kustomization.yaml
+++ b/kubernetes/apps/ai/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 namespace: ai
 components:
   - ../../components/common
+  - ../../components/repos
 resources: []
   # Flux-Kustomizations
   # - ./ollama/ks.yaml
