--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -5,5 +5,6 @@ kind: Kustomization
 namespace: default
 components:
   - ../../components/common
+  - ../../components/repos
 resources: []
   # Flux-Kustomizations
