--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -12,6 +12,8 @@ spec:
   dependsOn:
     - name: onepassword
       namespace: security
+    - name: flux-operator
+      namespace: flux-system
   interval: 1h
   path: ./kubernetes/apps/flux-system/flux-instance/app
   prune: false # Should never be deleted.
