--- a/talos/patches/controller/cluster.yaml
+++ b/talos/patches/controller/cluster.yaml
@@ -20,13 +20,5 @@ cluster:
     extraArgs:
       bind-address: 0.0.0.0
   extraManifests:
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
-    - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${prometheusOperatorVersion}/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
+    - # renovate: datasource=github-releases depName=prometheus-operator/prometheus-operator
+      https://github.com/prometheus-operator/prometheus-operator/releases/download/v0.80.1/stripped-down-crds.yaml
