--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -4,20 +4,20 @@
     {
       "description": ["Allowed PostgreSQL major release"],
       "matchDatasources": ["docker"],
-      "matchPackageNames": ["/postgresql/", "/postgres-backup-local/"],
+      "matchPackageNames": ["/cloudnative-pg/postgresql", "/postgres-backup-local"],
       "allowedVersions": "<17"
     },
     {
       "description": ["Custom schedule for frequently updated container digests"],
       "matchDataSources": ["docker"],
-      "matchPackagePatterns": ["postgresql"],
+      "matchPackageNames": ["/cloudnative-pg/postgresql"],
       "matchUpdateTypes": ["digest"],
       "schedule": ["on the first day of the month"]
     },
     {
       "description": ["Custom versioning for MinIO"],
       "matchDatasources": ["docker"],
-      "matchPackagePatterns": ["minio"],
+      "matchPackageNames": ["/minio/"],
       "versioning": "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$"
     },
     {
