--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -4,7 +4,7 @@
     {
       "description": ["Allowed PostgreSQL major release"],
       "matchDatasources": ["docker"],
-      "matchPackageNames": ["ghcr.io/cloudnative-pg/postgresql", "/postgres-backup-local"],
+      "matchPackageNames": ["**/cloudnative-pg/postgresql", "**/postgres-backup-local"],
       "allowedVersions": "<17"
     },
     {
