--- a/.renovate/packageRules.json5
+++ b/.renovate/packageRules.json5
@@ -10,20 +10,20 @@
     {
       "description": ["Custom schedule for frequently updated container digests"],
       "matchDataSources": ["docker"],
-      "matchPackageNames": ["/cloudnative-pg/postgresql"],
+      "matchPackageNames": ["**/cloudnative-pg/postgresql"],
       "matchUpdateTypes": ["digest"],
       "schedule": ["on the first day of the month"]
     },
     {
       "description": ["Custom versioning for MinIO"],
       "matchDatasources": ["docker"],
-      "matchPackageNames": ["/minio/"],
+      "matchPackageNames": ["**/minio/"],
       "versioning": "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z$"
     },
     {
       "description": ["Loose versioning for non-semver packages"],
       "matchDatasources": ["docker"],
-      "matchPackageNames": ["/searxng/"],
+      "matchPackageNames": ["**/searxng/"],
       "versioning": "loose"
     }
   ]
