fix(ci): rename job in flux-local workflow

--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -111,7 +111,7 @@ jobs:
             ${{ steps.diff.outputs.diff }}
             ```
 
-  success:
+  status:
     if: ${{ always() }}
     name: Flux Local - Success
     needs: ["test", "diff"]
