--- a/talos/patches/global/machine-kubelet.yaml
+++ b/talos/patches/global/machine-kubelet.yaml
@@ -3,9 +3,9 @@ machine:
     extraConfig:
       serializeImagePulls: false
     extraMounts:
-      - destination: /var/openebs/local
+      - destination: /var/mnt/extra
         type: bind
-        source: /var/openebs/local
+        source: /var/mnt/extra
         options:
           - bind
           - rshared
