--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
               - name: NODE
                 valueFrom:
                   fieldRef:
-                    fieldPath: spec.nodeName
+                    fieldPath: status.hostIP
             volumeMounts:
               - mountPath: /var/run/secrets/talos.dev
                 name: talos
