--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -104,7 +104,7 @@ jobs:
         run: curl -fsSL https://talos.dev/install | sh
 
       - name: Pull Image
-        run: echo $NODE && talosctl --nodes $NODE image pull ${{ matrix.images }}
+        run: talosctl --nodes $NODE image pull ${{ matrix.images }}
 
   status:
     if: ${{ always() }}
