--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -20,6 +20,15 @@
       "ignoreTests": true
     },
     {
+      "description": "Auto-merge GitHub Releases",
+      "matchDatasources": ["github-releases"],
+      "automerge": true,
+      "automergeType": "pr",
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchPackageNames": ["/gateway-api/", "/prometheus-operator/"],
+      "ignoreTests": false
+    },
+    {
       "description": ["Auto-merge KPS minors and patches"],
       "matchDatasources": ["helm", "docker"],
       "automerge": true,
