chore: update envrc

--- a/.envrc
+++ b/.envrc
@@ -1,10 +1,13 @@
 #shellcheck disable=SC2148,SC2155
 
-# Kubernetes
+# Environment variables
+export BOOTSTRAP_DIR="$(expand_path ./bootstrap)"
+export KUBERNETES_DIR="$(expand_path ./kubernetes)"
+export ROOT_DIR="$(expand_path ./)"
+export SCRIPTS_DIR="$(expand_path ./scripts)"
+export TALOS_DIR="$(expand_path ./talos)"
 export KUBECONFIG="$(expand_path ./kubernetes/kubeconfig)"
-# SOPS
 export SOPS_AGE_KEY_FILE="${XDG_CONFIG_HOME}/sops/age/home-ops.txt"
-# Talos
 export TALOSCONFIG="$(expand_path ./talos/clusterconfig/talosconfig)"
 # Taskfile
 export TASK_X_ENV_PRECEDENCE=1
