--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -6,9 +6,9 @@ namespace: database
 components:
   - ../../components/common
   - ../../components/repos
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./cloudnative-pg/ks.yaml
-  - ./dragonfly/ks.yaml
-  - ./pgadmin/ks.yaml
-  - ./postgres-backup/ks.yaml
+  # - ./cloudnative-pg/ks.yaml
+  # - ./dragonfly/ks.yaml
+  # - ./pgadmin/ks.yaml
+  # - ./postgres-backup/ks.yaml
