--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,17 +6,17 @@ namespace: media
 components:
   - ../../components/common
   - ../../components/repos
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./audiobookshelf/ks.yaml
-  - ./bazarr/ks.yaml
-  - ./jellyfin/ks.yaml
-  - ./jellyseerr/ks.yaml
-  - ./jellystat/ks.yaml
-  - ./lidarr/ks.yaml
-  - ./navidrome/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
-  - ./recyclarr/ks.yaml
-  - ./sonarr/ks.yaml
-  - ./unpackerr/ks.yaml
+  # - ./audiobookshelf/ks.yaml
+  # - ./bazarr/ks.yaml
+  # - ./jellyfin/ks.yaml
+  # - ./jellyseerr/ks.yaml
+  # - ./jellystat/ks.yaml
+  # - ./lidarr/ks.yaml
+  # - ./navidrome/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
+  # - ./recyclarr/ks.yaml
+  # - ./sonarr/ks.yaml
+  # - ./unpackerr/ks.yaml
