--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -6,14 +6,14 @@ namespace: observability
 components:
   - ../../components/common
   - ../../components/repos
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./exporters
-  - ./gatus/ks.yaml
-  - ./grafana/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./kubernetes-dashboard/ks.yaml
-  - ./loki/ks.yaml
-  - ./promtail/ks.yaml
-  - ./silence-operator/ks.yaml
-  - ./unpoller/ks.yaml
+  # - ./exporters
+  # - ./gatus/ks.yaml
+  # - ./grafana/ks.yaml
+  # - ./kube-prometheus-stack/ks.yaml
+  # - ./kubernetes-dashboard/ks.yaml
+  # - ./loki/ks.yaml
+  # - ./promtail/ks.yaml
+  # - ./silence-operator/ks.yaml
+  # - ./unpoller/ks.yaml
